# papyrust

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/papyrust/: Cargo.toml
crates/papyrust-core/: Cargo.toml
crates/papyrust-core/src/: config.rs  ir.rs  lib.rs  parse.rs  project.rs  validate.rs
crates/papyrust-epub/: Cargo.toml
crates/papyrust-epub/src/: archive.rs  lib.rs  nav.rs  opf.rs  pages.rs  theme.css  xhtml.rs
crates/papyrust-pdf/: Cargo.toml
crates/papyrust-pdf/src/: lib.rs  source.rs  world.rs
crates/papyrust/src/: main.rs
crates/papyrust/src/commands/: build.rs  init.rs  mod.rs  validate.rs
examples/: book.toml
src/: config.rs  ir.rs  main.rs  project.rs
src/commands/: build.rs  mod.rs  validate.rs
src/epub/: archive.rs  escape.rs  mod.rs  nav.rs  opf.rs  pages.rs  paths.rs  xhtml.rs
src/pdf/: body_layout.typ  mod.rs  preamble.typ  source.rs  world.rs
