[package]
name = "papyrust-cli"
description = "Build publication-quality EPUB and print-ready PDF from a folder of Markdown."
version = "0.1.1"
edition = "2024"
authors = ["Joseph Irvin"]
license = "MIT"
repository = "https://github.com/irvj/papyrust"
homepage = "https://github.com/irvj/papyrust"
readme = "README.md"
keywords = ["epub", "pdf", "markdown", "publishing", "typst"]
categories = ["command-line-utilities", "text-processing"]
rust-version = "1.85"

[[bin]]
name = "papyrust"
path = "src/main.rs"

[lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
pulldown-cmark = "0.13"
zip = { version = "2", default-features = false, features = ["deflate"] }
uuid = { version = "1", features = ["v5"] }
time = { version = "0.3", features = ["formatting", "macros"] }
typst = "0.14"
typst-pdf = "0.14"

[dev-dependencies]
tempfile = "3"
