[package]
name = "papyrust-core"
description = "Book IR, Markdown parsing, and validation for papyrust."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
pulldown-cmark = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
