[package]
name = "papyrust-epub"
description = "EPUB renderer for papyrust."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
papyrust-core = { workspace = true }
thiserror = { workspace = true }
zip = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }

[lints]
workspace = true
