[package]
name = "papyrust-pdf"
description = "Print PDF renderer for papyrust (via Typst)."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
papyrust-core = { workspace = true }
thiserror = { workspace = true }
typst = { workspace = true }
typst-pdf = { workspace = true }

[lints]
workspace = true
